syntax = "proto3";
package favoriteService;
option go_package = "./favoritePb";

message Video {
  // @inject_tag: json:"id" form:"id"
  int64 id = 1; // 视频唯一标识
  // @inject_tag: json:"author" form:"author"
  User author = 2; // 视频作者信息
  // @inject_tag: json:"play_url" form:"play_url"
  string play_url = 3; // 视频播放地址
  // @inject_tag: json:"cover_url" form:"cover_url"
  string cover_url = 4; // 视频封面地址
  // @inject_tag: json:"favorite_count" form:"favorite_count"
  int64 favorite_count = 5; // 视频的点赞总数
  // @inject_tag: json:"comment_count" form:"comment_count"
  int64 comment_count = 6; // 视频的评论总数
  // @inject_tag: json:"is_favorite" form:"is_favorite"
  bool is_favorite = 7; // true-已点赞，false-未点赞
  // @inject_tag: json:"title" form:"title"
  string title = 8; // 视频标题
}

message User {
  // @inject_tag: json:"id" form:"id"
  int64 id = 1; // 用户id
  // @inject_tag: json:"name" form:"name"
  string name = 2; // 用户名称
  // @inject_tag: json:"follow_count" form:"follow_count"
  int64 follow_count = 3; // 关注总数
  // @inject_tag: json:"follower_count" form:"follower_count"
  int64 follower_count = 4; // 粉丝总数
  // @inject_tag: json:"is_follow" form:"is_follow"
  bool is_follow = 5; // true-已关注，false-未关注
  // @inject_tag: json:"avatar" form:"avatar"
  string avatar = 6; //用户头像
  // @inject_tag: json:"background_image" form:"background_image"
  string background_image = 7; //用户个人页顶部大图
  // @inject_tag: json:"signature" form:"signature"
  string signature = 8; //个人简介
  // @inject_tag: json:"total_favorited" form:"total_favorited"
  int64 total_favorited = 9; //获赞数量
  // @inject_tag: json:"work_count" form:"work_count"
  int64 work_count = 10; //作品数量
  // @inject_tag: json:"favorite_count" form:"favorite_count"
  int64 favorite_count = 11; //点赞数量
}

message FavoriteActionRequest {
  // @inject_tag: json:"token" form:"token"
  string token = 1; // 用户鉴权token
  // @inject_tag: json:"video_id" form:"video_id"
  int64 video_id = 2; // 视频id
  // @inject_tag: json:"action_type" form:"action_type"
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message FavoriteActionResponse {
  // @inject_tag: json:"status_code" form:"status_code"
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  // @inject_tag: json:"status_msg" form:"status_msg"
  string status_msg = 2; // 返回状态描述
}

message FavoriteListRequest {
  // @inject_tag: json:"user_id" form:"user_id"
  int64 user_id = 1; // 视频id
  // @inject_tag: json:"token" form:"token"
  string token = 2; // 用户鉴权token
}

message FavoriteListResponse {
  // @inject_tag: json:"status_code" form:"status_code"
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  // @inject_tag: json:"status_msg" form:"status_msg"
  string status_msg = 2; // 返回状态描述
  // @inject_tag: json:"video_list" form:"video_list"
  repeated Video video_list = 3; // 视频列表
}

service FavoriteService {
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse) {}
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse) {}
}
